--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lista de Cursos de DevOPS da Alura</title>
+    <title>Lista de Cursos de DEVops da Alura</title>
 </head>
 <body>
     <ul>
         <li>Vagrant</li>
-        <li>Docker criando conteiner sem dor de cabeca</li>
+        <li>Docker criando conteiner sem dor de cabeca!</li>
         <li>Ansible</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
     </ul>
