--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <ul>
-        <li>Vagrant</li>
+        <li>Vagrant Atualizado</li>
         <li>Docker criando conteiner sem dor de cabeca!</li>
         <li>Ansible</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
