--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <ul>
         <li>Vagrant Atualizado</li>
         <li>Docker criando conteiner sem dor de cabeca!</li>
-        <li>Ansible</li>
+        <li>Ansible: ATUALIZADO</li>
         <li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
         <li>Kubernetes</li>
     </ul>
